# FlowPolicy-Libero

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: debugger.md  executor.md  reviewer.md
configs/: ablation_ode_steps.yaml  cfm_default.yaml  cfm_smoke.yaml  dp_default.yaml  dp_smoke.yaml
docs/: conda-env.yml  env.md
notes/: checklist.md  decisions.md  report.md
plan/: c2_coding_plan.md  c2_plan.md  reading_plan.md
scripts/: ablation_ode.py  check_agentview_orientation.py  check_devices.sh  eval_force_augment.py  precompute_r3m.py  run_all.sh  smoke_test.sh
src/: cfm.py  data.py  dp.py  eval.py  infer.py  models.py  train.py
src/model/: ObsEncoder.py  modules.py  unet1d.py
tests/: test_cfm_loss.py  test_euler_solver.py
