[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-policy-libero"
version = "0.0.1"
description = "Conditional Flow Matching policy on LIBERO-Goal."
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24",
  "h5py>=3.9",
  "einops>=0.7",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "tqdm>=4.66",
  "imageio[ffmpeg]>=2.31",
  "opencv-python>=4.8",
  "tensorboard>=2.14",
  "r3m @ git+https://github.com/facebookresearch/r3m.git",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
